[package]
name = "smartthings_tools_rs"
version = "0.1.0"
edition = "2021"
description = "SmartThings LLM Tool Package — Rust implementation"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
dotenvy = "0.15"

[dev-dependencies]
dotenvy = "0.15"
